--- a/_projects/2025-MAE4300.md
+++ b/_projects/2025-MAE4300.md
@@ -8,18 +8,22 @@ image: /assets/images/radio-machine-cad.jpg
 
 For a class, we were asked to conduct an ethical analysis on the Boeing 737 MAX case. We were asked to analyze the ethics behind the decision to add the MCAS system onto the new Boeing 737 MAX planes without the knowledge of the pilots operating the aircraft. The motivation behind the Boeing 737 MAX was to create a new plane that was cheap and more fuel efficient in order to rival the new A320 neo series released by competitor Airbus. In order to cut costs, Boeing decided to put newer larger engines on the old 737 fuselage. As a result, the new aircraft had a tendency to tilt up. Boeing was forced to add the MCAS system to help with this issue. However, in order to avoid new training costs of pilots, they did not notify pilots of the new technology addition. During two flights of the max, the MCAS malfunctioned pushing down the nose of the aircraft when it was not needed. Pilots did not know how to react as they did not know what was happening. As a result, both of these aircraft crashed killing hundreds of people on board.
 
-Nulla et magna urna. Morbi a ipsum sollicitudin, rhoncus risus volutpat, ultricies nunc. Quisque mollis finibus ante id imperdiet. Quisque vehicula elit sit amet felis facilisis fermentum.
+We identified ten ethical issues associated with these events. 1. Should Boeing be allowed to self-regulate? 2. Should Boeing be prioritizing profit or safety? 3. Should the engineers have disclosed more information about MCAS? 4. Should the FAA have stricter regulations? 5. Should the pilots have been trained on MCAS? 6. Should Boeing have disclosed the simulator failures? 7. Should Boeoing have grounded the Maxes after the first crash? 8. Should you fire a whistleblower? 9. Should Boeing have blamed the pilots for the crashes? 10. Should htere be greater protections for whistleblowers?
 
-![Shaded rendering of earlier version]({{ "/assets/images/radio-machine.jpg" | relative_url }}){: .inline-image-r style="width: 200px"}
+Questions 1, 2, 3, 6, and 7 were expanded to identify why these issues are important to this case and why they are more significant than the other ones that were identified. Question 1 is important because it could've been prevented the approval of MCAS and it could've stopped everything from happening. Question 2 is important because it could've prevented the smuggling of the development of MCAS and it could've stopped the MCAS initiative. Qeustion 3 is important because it could've prepared the pilots to use MCAS correctly and it could've help fix the errors in MCAS. Question 6 is important because it could've helped solve issues with MCAS before passengers went on these planes and it could've helped Boeing stay accountable. Question 7 is important because it could've prevented more lives from being lost and it could've directly saved lives.
 
-Nulla et magna urna. Morbi a ipsum sollicitudin, rhoncus risus volutpat, ultricies nunc. Quisque mollis finibus ante id imperdiet. Quisque vehicula elit sit amet felis facilisis fermentum.
+Some material facts about this case is that MCAS relied on an input from only a single angle of attack sensor rather than two sensors. MCAS could push the nose down of the aircraft without any input from the pilot and it couldn't be overidden. Boeing put newer larger engines that were more fuel efficient, but caused the aircraft to tilt which created the need for MCAS. Warning light showing diagreement between 2 angle of attack sensors doesn't function when angle of attack display isn't installed, which was made very expensive to buy by Boeing, so many airlines didn't purchase it. Boeing impletmented MCAS in order to avoid a full redesign and avoid new pilot training to save costs.
 
-Aenean tincidunt aliquam arcu, in euismod dui dapibus eu. In placerat, mi et ultrices consequat, quam ligula cursus mauris, in semper neque nibh at est. Maecenas hendrerit dignissim porta. Phasellus nec fringilla dolor. Etiam efficitur nisi sit amet velit pharetra feugiat. Etiam ultrices turpis at leo semper, eleifend scelerisque neque malesuada. Aliquam molestie congue rhoncus. Donec blandit neque dolor, nec tristique mi pretium ac. Mauris tincidunt ullamcorper magna, nec pellentesque mi sagittis quis.
+Some individual facts about this case is that Jim McNerney opted for a five-year program to upgrade 737 MAX series. It was decided to only have two AOA sensors on the 737 MAX. Boeing assumed that live pilots would recognize and respond to MCAS malfunctions within seconds. Boeing opted for software changes not disclosed to FAA or described in pilot's manual. Boeing leadership failed to ground its fleet of 737 MAX planes after the first crash.
 
-I was inspired by this old radio when I made this rendering:
+Some organizational facts about this case is that Boeing prioritized cost cutting in every area to maximize shareholder value. Internal incentives gave management bonuses for delivery milestones. FAA relied on Boeing selt-certification system which reduced external review. After the first crash, Boeing blamed pilot error instead of design flaws. Boeing's communication structure isolated engineers from safety and managment.
 
-![Photo of old radio]({{ "/assets/images/old-radio.jpg" | relative_url }}){: .inline-image-l}
+Some reasonable assumptions about this case is that Boeing did not prioritize safety. FAA didn't know about the single-sensor dependency for MCAS until later since Boeing was self regulated. Boeing witheld details about MCAS in pilots manuals to avoid retraining pilots. Alternative options to MCAS were rejected for being costly and time consuming. Boeing proceeded to implement the cheapest up front system.
 
-Aenean tincidunt aliquam arcu, in euismod dui dapibus eu. In placerat, mi et ultrices consequat, quam ligula cursus mauris, in semper neque nibh at est. Maecenas hendrerit dignissim porta. Phasellus nec fringilla dolor. Etiam efficitur nisi sit amet velit pharetra feugiat. Etiam ultrices turpis at leo semper, eleifend scelerisque neque malesuada. Aliquam molestie congue rhoncus. Donec blandit neque dolor, nec tristique mi pretium ac. Mauris tincidunt ullamcorper magna, nec pellentesque mi sagittis quis.
+Boeing may define many terms differently than other people like the general public or people in the FAA. Some terms like this may be safety, accountability, compliance, integrity, and risk. Boeing may define these terms more loosely in favor of their own profits and interests.
 
-Aenean tincidunt aliquam arcu, in euismod dui dapibus eu. In placerat, mi et ultrices consequat, quam ligula cursus mauris, in semper neque nibh at est. Maecenas hendrerit dignissim porta. Phasellus nec fringilla dolor. Etiam efficitur nisi sit amet velit pharetra feugiat. Etiam ultrices turpis at leo semper, eleifend scelerisque neque malesuada. Aliquam molestie congue rhoncus. Donec blandit neque dolor, nec tristique mi pretium ac. Mauris tincidunt ullamcorper magna, nec pellentesque mi sagittis quis.
+For identified issues with this case, many stakeholders are effected by them. These stakeholders can be categorized into primary, secondary, and decision makers. Primary stakeholders are people directly effected by this case like airline passengers or pilots worldwide. Secondary stakeholders may be people like the Airlines or Boeing shareholders, people who are effected indirectly by this case. Decision makers may be Boeing management or senior certification engineers who let this happen. For the ethical issues, we can also attribute different issues to relevant Canons outlined by the American Society for Mechanical Engineers which outlines general statements that all mechanical engineers should follow.
+
+Although it may seem that Boeing acted unethically in some instances, there may be practical constraints in place that prevented them from acting ethically. For example, Boeing aapproving MCAS without third party oversight may help with staffing shortages at the FAA. Boeing prioritizing profits may be because Airbus did not give them enough time to develop a new plane and they had to have money to support their own and their employee's livelihoods. Boeing engineers didn't dislose more information about MCAS because they faced pressure from higher ups to deliver a profiable plane and disclosing more information would've cost Boeing profits. Boeing didn't ground all MAX planes after the first crash before the second one occurred because they didn't have the proper resources to address the issues.
+
+For all of these issues associated with this case, there may solutions at the individual level, organizational level, and systemic level that could be implemented to help solve these issues. A combination of all these solutions can help solve the issues going on Boeing and help prevenet a tragedy like this from happening in the future.
