MAE 4300 Image  update

--- a/_projects/2025-MAE4300.md
+++ b/_projects/2025-MAE4300.md
@@ -3,7 +3,7 @@ layout: project
 title: MAE 4300 project writeup
 description: Ethical Analysis of Boeing 737 MAX Crashes
 technologies: [Literature Review]
-image: /assets/images/radio-machine-cad.jpg
+image: /assets/images/IMG_2080.jpg
 ---
 
 For a class, we were asked to conduct an ethical analysis on the Boeing 737 MAX case. We were asked to analyze the ethics behind the decision to add the MCAS system onto the new Boeing 737 MAX planes without the knowledge of the pilots operating the aircraft. The motivation behind the Boeing 737 MAX was to create a new plane that was cheap and more fuel efficient in order to rival the new A320 neo series released by competitor Airbus. In order to cut costs, Boeing decided to put newer larger engines on the old 737 fuselage. As a result, the new aircraft had a tendency to tilt up. Boeing was forced to add the MCAS system to help with this issue. However, in order to avoid new training costs of pilots, they did not notify pilots of the new technology addition. During two flights of the max, the MCAS malfunctioned pushing down the nose of the aircraft when it was not needed. Pilots did not know how to react as they did not know what was happening. As a result, both of these aircraft crashed killing hundreds of people on board.
