MAE 4300 Title Change

--- a/_projects/2025-MAE4300.md
+++ b/_projects/2025-MAE4300.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: MAE 4300 project writeup
+title: MAE 4300 Ethical Analysis
 description: Ethical Analysis of Boeing 737 MAX Crashes
 technologies: [Literature Review]
 image: /assets/images/IMG_2080.JPG
