MAE4272 equation update 2

--- a/_projects/2025-MAEE4272.md
+++ b/_projects/2025-MAEE4272.md
@@ -7,8 +7,7 @@ image: /assets/images/cool CAD.png
 ---
 
 
-A wind turbine blade was designed to maximize power generation with the NACA 4412 cross section in a wind velocity profile given by the Weibull probability distribution, ```math
-p(U) = \frac{k}{c} \left(\frac{U}{c}\right)^{k-1} \exp\left[-\left(\frac{U}{c}\right)^k\right] where k = 5 and c = 5, where U is the incoming wind velocity m/s. The design had to meet constraints where the designed operating angular velocity is less than 2000 RPM, must be compatible with the standard hub piece, have a maximum length of 6 inches from root to tip, and a maximum width of 2 inches. Using a combination of an iterative method and a blade element theory, both in Matlab, an optimized blade was designed to operate at 1100 RPM and a wind speed of 4.167 m/s. Dimensions were generated at elements along the entire length of the blade of 6 inches using equations that don’t account for rotational wake and tip losses. 
+A wind turbine blade was designed to maximize power generation with the NACA 4412 cross section in a wind velocity profile given by the Weibull probability distribution, p(U) = (k/c)(U/c)^k-1 exp[-(U/c)^k] where k = 5 and c = 5, where U is the incoming wind velocity m/s. The design had to meet constraints where the designed operating angular velocity is less than 2000 RPM, must be compatible with the standard hub piece, have a maximum length of 6 inches from root to tip, and a maximum width of 2 inches. Using a combination of an iterative method and a blade element theory, both in Matlab, an optimized blade was designed to operate at 1100 RPM and a wind speed of 4.167 m/s. Dimensions were generated at elements along the entire length of the blade of 6 inches using equations that don’t account for rotational wake and tip losses. 
 
 Using a combination of an iterative method and a blade element theory, both in Matlab, an optimized blade was designed to operate at 1100 RPM and a wind speed of 4.167 m/s. Dimensions were generated at elements along the entire length of the blade of 6 inches using equations that don’t account for rotational wake and tip losses. Using these generated dimensions, a CAD file was created and a prototype was printed using Accura 25 material.
 
