--- a/_projects/2025-MAEE4272.md
+++ b/_projects/2025-MAEE4272.md
@@ -13,7 +13,7 @@ Using a combination of an iterative method and a blade element theory, both in M
 
 ![Printed Protoype of Final Blade Design ]({{ "/assets/images/cool prototype.jpg" | relative_url }}){: .inline-image-r style="width: 200px"}
 
-Power curves at different wind speeds near the design wind speed of 4.167 m/s were obtained through testing of the prototype of our design in a wind tunnel and plotted on the same graph. The prototype was able to sustain the loads during operation and did not exhibit failure. When obtaining this experimental data, our prototype exhibited an unexplained behavior where the wind turbine could not spin sustainably at a rotational velocity of around and below 1500 RPM. A double peak behavior was observed during the testing at some of the wind velocities, which may be attributed to the torque break hysteresis.
+Power curves at different wind speeds near the design wind speed of 4.167 m/s were obtained through testing of the prototype of our design in a wind tunnel and plotted on the same graph. The resulting power curves were analyzed to assess the performance of our blades. We did this by verifying that the fabricated blades operated near their predicted optimal power-extraction performance and to confirm that the measured aerodynamic loads remained within the structural limits established during our design analysis. The prototype was able to sustain the loads during operation and did not exhibit failure. When obtaining this experimental data, our prototype exhibited an unexplained behavior where the wind turbine could not spin sustainably at a rotational velocity of around and below 1500 RPM. A double peak behavior was observed during the testing at some of the wind velocities, which may be attributed to the torque break hysteresis.
 
 ![Power Curves at Different Fan Speeds Obtained During Testing]({{ "/assets/images/cool graph.png" | relative_url }}){: .inline-image-r style="width: 200px"}
 
